location information query started

--- a/res/layout/layout_overview.xml
+++ b/res/layout/layout_overview.xml
@@ -8,9 +8,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         
+		android:layout_toLeftOf="@+id/text_overview_slash"
+		android:layout_alignParentLeft="true"        
         android:layout_marginLeft="@dimen/overview_textUsage_leftSpace"
         android:layout_marginTop="@dimen/overview_textUsage_topSpace"
         android:textAppearance="@style/overview_text_usage"
+        android:gravity="center_horizontal"
         android:text="100"
         />
     
@@ -20,7 +23,7 @@
         android:layout_height="wrap_content"
         
         android:layout_alignBottom="@+id/text_overview_usage"
-        android:layout_toRightOf="@+id/text_overview_usage"
+        android:layout_toLeftOf="@+id/text_overview_total"
         android:layout_marginLeft="@dimen/overview_textSlash_leftSpace"
         android:layout_marginRight="@dimen/overview_textSlash_rightSpace"
         android:textAppearance="@style/overview_text_totals"
@@ -33,8 +36,9 @@
         android:layout_height="wrap_content"
         
         android:layout_alignBottom="@+id/text_overview_usage"
-        android:layout_toRightOf="@+id/text_overview_slash"
+        android:layout_alignParentRight="true"
         android:textAppearance="@style/overview_text_totals"
+        android:layout_marginRight="@dimen/overview_textUsage_leftSpace"
         android:text="300"
         />
     
